--- a/nokri/templates/testapp/home.html
+++ b/nokri/templates/testapp/home.html
@@ -7,14 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
 </head>
-<body class="bg-primary">
+<body class="bg-secondary">
    <div class="container">
-<h3 class="text-center bg-primary rounded text-white">Welcom To Mazi Nokri</h3>
+<h3 class="text-center bg-info rounded text-white">Welcom To Mazi Nokri</h3>
 
   <div class="box">
     <a href="/mum" class="btn btn-primary">Mumbai</a>
     <a href="/pune" class="btn btn-success">Pune</a>
-    <a href="/hyd" class="btn btn-warning">Hyderabad</a>
+    <a href="/hyd" class="btn btn-warning">Hydrabad</a>
   </div>
 
 
