--- a/nokri/templates/testapp/mumbai.html
+++ b/nokri/templates/testapp/mumbai.html
@@ -1,15 +1,18 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mumbai</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
 </head>
 <body class="bg-white">
 
     <table class="table table-bordered text-white">
-        <thead>
+        
             <tr>
                 <th>Company Name</th>
                 <th>Job Titles</th>
@@ -19,9 +22,9 @@
                 <th>Location</th>
                 <th>Address</th>
             </tr>
-        </thead>
+
         <tbody>
-            {% for mumbai in mumbai %}
+            {% for mumbai in job_list %}
             <tr scope="row">
                 <td>{{mumbai.company_name}}</td>
                 <td>{{mumbai.job_titles}}</td>
